Code cleanup and getting rid of static paths in code.

--- a/AppUpdaterServer/appsettings.json
+++ b/AppUpdaterServer/appsettings.json
@@ -6,5 +6,6 @@
     }
   },
   "AllowedHosts": "*",
-  "Storage": "Filesystem"
+  "Storage": "Filesystem",
+  "VersionDirectory": "C:\\SampleApplication"
 }
